--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,8 @@
-@import url('https://rsms.me/inter/inter.css');
-html { font-family: 'Inter', sans-serif; }
-@supports (font-variation-settings: normal) {
-  html { font-family: 'Inter var', sans-serif; }
+html {
+  @apply font-sans;
+}
+
+@font-face {
+  font-family: "goudyOldStyle";
+  src: url('/fonts/goudy-old-style-regular.ttf')
 }
